<resources>
    <string name="app_name">Kalender Keuangan</string>
    <string name="welcome">Welcome to Kalender Keuangan</string>
    <string name="deskripsi">Mengatur keuangan pribadi maupun kantoran tidak pernah sesimpel ini</string>
    <string name="title_activity_pribadi">PribadiActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pribadi">Pribadi</string>
    <string name="kantoran">Kantoran</string>
    <string name="pilihmode">Pilih mode kalender keuangan mana yang ingin kamu pakai?</string>
    <string name="modepribadi">Kalender Keuangan Pribadi</string>
</resources>